--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           <h5 class="mt-1">Search for a City:</h5>
           <div class="form-inline form-group">
             <input class="form-control" type="text" id="search-value" />
-            <button class="btn btn-primary" id="search-button">
+            <button class="btn btn-primary" type="submit" id="search-button">
+              Search
               <i class="fa fa-search"></i>
             </button>
           </div>
